Fix slightly weird styling on 2-col view on Firefox

--- a/qsa-public-spa/src/scss/overrides.scss
+++ b/qsa-public-spa/src/scss/overrides.scss
@@ -46,6 +46,15 @@
  }
 }
 
+#qg-primary-content .login-box {
+  position: absolute;
+  top: -45px;
+  right: 10px;
+}
+
+#qg-secondary-content .login-box {
+  margin: 5px 10px;
+}
 
 .qg-aside {
   a:visited {
